Fix problem with overlapping content in form pages #7871

--- a/resources/gato-template-txstate2015/css/_maincontent.scss
+++ b/resources/gato-template-txstate2015/css/_maincontent.scss
@@ -86,3 +86,13 @@
   }
 }
 
+.txst-form-body {
+  width: 75%;
+}
+
+.txst-form.full-width {
+  .txst-form-body {
+    width: 100%;
+  }
+}
+
